--- a/src/main/resources/templates/fragments/otherreports/usuarioreport.html
+++ b/src/main/resources/templates/fragments/otherreports/usuarioreport.html
@@ -5,44 +5,44 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<script> Textheader('pnt_reporte_abog1',document.title);</script>
+    <script> Textheader('pnt_reporte_abog1', document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
             <h3></h3>
-<div class="row text-center">
+            <div class="row text-center">
                 <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
-</div> 
+            </div> 
             <div>
                 <br>
                 <form class="form-horizontal" id="formreport">
 
-<div class="form-group">
-                <label class="col-sm-5 control-label">Fecha Desde(*):</label>
-                <div class="col-sm-4">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
-                     <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechainicial" id="fechainicial"  onchange="isDat(this.value,'fechainicial');Fechas(this.value,$('#fechafinal').val().toString(),'fechainicial','fechafinal')"/>
-                </div>
-                 <div class="popup "><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup1')" onmouseout ="javascript:ocultarAyuda('poppup1')">a</a></b>
-                        
-                        <span class="popuptext" id="poppup1">Seleccione o digite la Fecha de inicio para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
+                    <div class="form-group">
+                        <label class="col-sm-5 control-label">Fecha Desde(*):</label>
+                        <div class="col-sm-4">
+                            <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
+                            <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechainicial" id="fechainicial"  onchange="isDat(this.value, 'fechainicial');Fechas(this.value, $('#fechafinal').val().toString(), 'fechainicial', 'fechafinal')"/>
+                        </div>
+                        <div class="popup "><b>
+                                <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup1')" onmouseout ="javascript:ocultarAyuda('poppup1')">a</a></b>
+
+                            <span class="popuptext" id="poppup1">Seleccione o digite la Fecha de inicio para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
+                        </div>
                     </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-5 control-label">Fecha Hasta(*):</label>
-                <div class="col-sm-4">
-                    <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value,'fechafinal');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
-                </div>
-                <div class="popup "><b>
-                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup2')" onmouseout ="javascript:ocultarAyuda('poppup2')">a</a></b>
-                        <span class="popuptext" id="poppup2">Seleccione o digite la Fecha de fin para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
+                    <div class="form-group">
+                        <label class="col-sm-5 control-label">Fecha Hasta(*):</label>
+                        <div class="col-sm-4">
+                            <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value, 'fechafinal');Fechas($('#fechainicial').val().toString(), this.value, 'fechainicial', 'fechafinal')" />
+                        </div>
+                        <div class="popup "><b>
+                                <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup2')" onmouseout ="javascript:ocultarAyuda('poppup2')">a</a></b>
+                            <span class="popuptext" id="poppup2">Seleccione o digite la Fecha de fin para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
+                        </div>
                     </div>
-            </div>
                     <div class="row" align="center">    
-                         <td><a class="btn btn-danger" id="generar">PDF</a></td>
+                        <td><a class="btn btn-danger" id="generar">PDF</a></td>
                     </div>
                 </form>
             </div>
@@ -53,19 +53,21 @@
     </div>
 </body>
 <script>
-    function Fechas(val1,val2,val3,val4){
-                        var foo=ValidarFechaReporte(val1,val2,val3,val4).split(",");;
-                        if(foo[0]!=foo[2]){
-                            swal(foo[1], foo[0]);
-                        }
-                    }
-                    
-                    function isDat(val,id){
-                        var foo=ExisteFecha(val,id).split(",");;
-                        if(foo[0]!=foo[2]){
-                            swal(foo[1], foo[0]);
-                        }
-                    }
+    function Fechas(val1, val2, val3, val4) {
+        var foo = ValidarFechaReporte(val1, val2, val3, val4).split(",");
+        ;
+        if (foo[0] != foo[2]) {
+            swal(foo[1], foo[0]);
+        }
+    }
+
+    function isDat(val, id) {
+        var foo = ExisteFecha(val, id).split(",");
+        ;
+        if (foo[0] != foo[2]) {
+            swal(foo[1], foo[0]);
+        }
+    }
     $(document).ready(function () {
         $('#fechainicial').datepicker({
             dateFormat: 'dd/mm/yy'
@@ -74,15 +76,21 @@
         $('#fechafinal').datepicker({
             dateFormat: 'dd/mm/yy'
         });
-        $('#generar').click(function(){
-            $("#formreport").attr('action', '../usuarioreport/');
-            $("form#formreport").submit();
-            
+        $('#generar').click(function () {
+            var foo = ValidarFechaReporte($('#fechainicial').val().toString(), $('#fechafinal').val().toString(),
+                    'fechainicial', 'fechafinal').split(",");
+            ;
+            if (foo[0] != foo[2]) {
+                swal(foo[1], foo[0]);
+            } else {
+                $("#formreport").attr('action', '../usuarioreport/');
+                $("form#formreport").submit();
+            }
         });
-        $('#excel').click(function(){
+        $('#excel').click(function () {
             $("#formreport").attr('action', '../abogadosxls');
             $("form#formreport").submit();
-            
+
         });
     });
 </script>
