acentos de encabezados heredados

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -45,8 +45,8 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row text-center">
-                        <h2 class="hmod">Ministerio de Justicia y Seguridad Publica
-                        <br>Direccion de Recursos Humanos
+                        <h2 class="hmod">Ministerio de Justicia y Seguridad Pública
+                        <br>Dirección de Recursos Humanos
                         <br>SISADMRH</h2>
                         <!--class="hmod"-->
                     </div>
