--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -30,8 +30,8 @@
             </div>
             <div class="col_cen">
                 <div class="text-center">
-                    <h2 class="h2mod">Ministerio de Justicia y Seguridad Publica <br>
-                        Direccion de Recursos Humanos<br>
+                    <h2 class="h2mod">Ministerio de Justicia y Seguridad Pública <br>
+                        Dirección de Recursos Humanos<br>
                         SISADMRH</h2>
                 </div>
             </div>
